network: expose values via the api
